Prevent edit workout link spilling over

--- a/src/pages/WorkoutShowPage.css
+++ b/src/pages/WorkoutShowPage.css
@@ -184,8 +184,12 @@
     flex-direction: column;
   }
 
-  .button {
+  button.button {
     width: 100%;
+    text-align: center;
+  }
+
+  a.button {
     text-align: center;
   }
 }
